--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "recharts": "^3.6.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "wrangler": "^4.56.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
